--- a/web/templates/status/show.html.eex
+++ b/web/templates/status/show.html.eex
@@ -1,4 +1,5 @@
 <style>
+  .statusBoard { font-size: 18px; }
   .projectPersons .icon { min-width: 40px; height: 40px; vertical-align: middle; text-align: center; font-size: 20px; line-height: 40px; background-color: rgb(252, 88, 181); color: #808080; display: inline-block; border-radius: 5px; }
   .projectStatus { width: 30px; text-align: center; }
   .projectStatus .icon { border-radius: 50px; display: block; height: 20px; margin: 4px auto 0; width: 20px; background-color: rgb(174, 183, 188); box-shadow: 0 0 10px rgb(174, 183, 188); }
@@ -7,7 +8,7 @@
   .projectStatus .icon.p3 { background-color: rgb(0, 108, 230); box-shadow: 0 0 10px rgb(0, 108, 230); }
 </style>
 
-<table>
+<table class="statusBoard">
   <%= for {status, name, project} <- sorted_by_status(@projects) do %>
     <tr class="<%= status %>">
       <td class="projectStatus"><span class="icon <%= status %>"></span></td>
